--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: Adithya Narayan # the website title (if blank, full name will be used instead)
 first_name: Adithya
 middle_name: 
 last_name: Narayan
-email: anaraya2@andrew.cmu.edu
+email: anaraya2@cs.cmu.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -123,8 +123,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Blog # blog_name will be displayed in your blog page
+blog_description: Some cool stuff I've worked on/written about.
 permalink: /blog/:year/:title/
 
 # Pagination
@@ -287,8 +287,8 @@ display_categories: ["blockquotes"] # these categories will be displayed on the 
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Narayan]
+  first_name: [Adithya, A.]
 
   style: apa
   locale: en
